<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WorldskillsBank</string>
    <string name="button1act">Button</string>
    <string name="button2_1act">Button</string>
    <string name="button3_1act">Button</string>
    <string name="Icon_Relativel">TODO</string>
    <string name="iconrelativel">icon_relative</string>
    <string name="IM2act1">TODO</string>
    <string name="todo">TODO</string>
    <string name="butimage1">TODO</string>
    <string name="button">Button</string>
    <string name="demo">TODO</string>
    <string name="textview">TextView</string>
</resources>
